Fix stashed changes button content alignment

--- a/app/styles/ui/changes/_changes-list.scss
+++ b/app/styles/ui/changes/_changes-list.scss
@@ -15,6 +15,7 @@
     min-height: 29px;
 
     display: flex;
+    align-items: center;
     flex-grow: 1;
     padding: 0 var(--spacing);
     width: 100%;
